--- a/cit230/index.html
+++ b/cit230/index.html
@@ -18,7 +18,7 @@
 
     <header>
     <img src="images/P4271307.JPG" width="200" height="200" alt="my profile picture">
-    <h1></h1>
+    <h1>Test test Hello!</h1>
     </header>
 
     <nav>
@@ -26,7 +26,7 @@
     </nav>
 
     <main>
-        <h2></h2>
+        <h2>Can you see me?</h2>
         <ol>
         <li>Lesson ##: <a href="#">Assignment Label</a></li>
         </ol>
