--- a/cit230/index.html
+++ b/cit230/index.html
@@ -17,7 +17,7 @@
 
     <header>
     <img src="images/P4271307.JPG" width="200" height="200" alt="my profile picture">
-    <h1>Test test Hello!</h1>
+    <h1>David P Laws II</h1>
     </header>
 
     <nav>
@@ -25,10 +25,10 @@
     </nav>
 
     <main>
-        <h2>Can you see me?</h2>
-        <ol>
+        <h2>Test</h2>
+        <ul>
         <li>Lesson ##: <a href="#">Assignment Label</a></li>
-        </ol>
+        </ul>
     </main>
 
     <footer>
