--- a/cit230/index.html
+++ b/cit230/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+    <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>CIT 230 Assignment Portal | David P. Laws II | BYU-Idaho</title>
-    <meta name="description" content="My personal assignment portal for the CIT 230 class.">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>CIT 230 Assignment Portal | David P. Laws II | BYU-Idaho</title>
+        <meta name="description" content="My personal assignment portal for CIT 230.">
 
-    <style>
         <link rel="stylesheet" href="styles/main.css">
-    </style>
 
-</head>
 
-<body>
+    </head>
 
-    <header>
-    <img src="images/P4271307.JPG" width="200" height="200" alt="my profile picture">
-    <h1></h1>
-    </header>
+    <body>
 
-    <nav>
-        <!--this is where a menu will go-->
-    </nav>
+        <header>
+            <img src="images/P4271307.JPG" width="200" height="200" alt="my profile picture">
+            <h1>David P Laws II</h1>
+        </header>
 
-    <main>
-        <h2></h2>
-        <ol>
-        <li>Lesson ##: <a href="#">Assignment Label</a></li>
-        </ol>
-    </main>
+        <nav>
+            <!--this is where a menu will go-->
+        </nav>
 
-    <footer>
-        <p>&copy; 2018 | David Laws | United States |  <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
-        </p>
-    </footer>
+        <main>
+            <h2></h2>
+            <ul>
+                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+            </ul>
+        </main>
 
-</body>
+        <footer>
+            <p>&copy; 2018 | David Laws | United States |  <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+            </p>
+        </footer>
+
+    </body>
 
 </html>
