--- a/cit230/assignments/lesson-3/fixedhtml.html
+++ b/cit230/assignments/lesson-3/fixedhtml.html
@@ -6,7 +6,7 @@
         <title>Fixed HTML: May 2018</title>
         <meta charset="utf-8">
         <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
 
     <body>
