--- a/cit230/index.html
+++ b/cit230/index.html
@@ -26,6 +26,7 @@
         <h2></h2>
         <ul>
         <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed Html</a></li>
+        <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin</a></li>
         </ul>
     </main>
 
