--- a/cit230/index.html
+++ b/cit230/index.html
@@ -3,10 +3,10 @@
 
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>CIT 230 Assignment Portal | David P. Laws II | BYU-Idaho</title>
         <meta name="description" content="My personal assignment portal for CIT 230.">
-
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
     </head>
 
