--- a/cit230/index.html
+++ b/cit230/index.html
@@ -25,8 +25,9 @@
     <main>
         <h2></h2>
         <ul>
-        <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed Html</a></li>
-        <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin</a></li>
+            <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed Html</a></li>
+            <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin</a></li>
+            <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Franklin pt. 2</a></li>
         </ul>
     </main>
 
