--- a/cit230/index.html
+++ b/cit230/index.html
@@ -28,6 +28,7 @@
             <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed Html</a></li>
             <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin</a></li>
             <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Franklin pt. 2</a></li>
+            <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin pt. 3</a></li>
         </ul>
     </main>
 
