--- a/cit230/index.html
+++ b/cit230/index.html
@@ -14,7 +14,7 @@
     <body>
 
     <header>
-    <img src="images/P4271307.JPG" width="200" height="200" alt="my profile picture">
+    <img src="images/IMG_4211.JPG" width="200" height="200" alt="my profile picture">
     <h1>David P Laws II</h1>
     </header>
 
