--- a/cit230/index.html
+++ b/cit230/index.html
@@ -14,7 +14,7 @@
     <body>
 
     <header>
-    <img src="images/IMG_4211.JPG" width="200" height="200" alt="my profile picture">
+    <img src="images/IMG_4211.JPG" width=75% alt="my profile picture">
     <h1>David P Laws II</h1>
     </header>
 
@@ -29,6 +29,7 @@
             <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin</a></li>
             <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Franklin pt. 2</a></li>
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin pt. 3</a></li>
+            <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin pt. 4</a></li>
         </ul>
     </main>
 
