--- a/cit230/assignments/lesson-7/gallery.html
+++ b/cit230/assignments/lesson-7/gallery.html
@@ -18,6 +18,7 @@
 
 <!-- Scripts -->
 <script src="scripts/currentdate.js" type="text/javascript"></script>
+<script src="scripts/hamburger.js" type="text/javascript"></script>
 
 </head>
 
@@ -54,32 +55,32 @@
 
 <div class="weatherPhoto">
     <figure>
-        <img src="images/gallery/do-the-dew.jpg" srcset="" alt="trees with sun shining">
+        <img src="images/gallery/do-the-dew.jpg" alt="trees with sun shining">
         <figcaption>Foggy morning at the train station.</figcaption>
     </figure>
 
     <figure>
-        <img src="images/gallery/photo-1517309230475-6736d926b979.jpg" srcset="" alt="trees with sun shining">
+        <img src="images/gallery/photo-1517309230475-6736d926b979.jpg" alt="trees with sun shining">
         <figcaption>Evening rain in Chinatown.</figcaption>
     </figure>
 
     <figure>
-        <img src="images/gallery/photo-1504466664756-1adbe6d13b36.jpg" srcset="" alt="trees with sun shining">
+        <img src="images/gallery/photo-1504466664756-1adbe6d13b36.jpg" alt="trees with sun shining">
         <figcaption>Lightning strikes over the city.</figcaption>
     </figure>
 
     <figure>
-        <img src="images/gallery/photo-1445264618000-f1e069c5920f.jpg" srcset="" alt="trees with sun shining">
+        <img src="images/gallery/photo-1445264618000-f1e069c5920f.jpg" alt="trees with sun shining">
         <figcaption>Midday clouds roll in.</figcaption>
     </figure>
 
     <figure>
-        <img src="images/gallery/photo-1500487003906-9baadc8d610d.jpg" srcset="" alt="trees with sun shining">
+        <img src="images/gallery/photo-1500487003906-9baadc8d610d.jpg" alt="trees with sun shining">
         <figcaption>Morning light breaks over the bridge on North Street.</figcaption>
     </figure>
 
     <figure>
-        <img src="images/gallery/photo-1460411794035-42aac080490a.jpg" srcset="" alt="trees with sun shining">
+        <img src="images/gallery/photo-1460411794035-42aac080490a.jpg" alt="trees with sun shining">
         <figcaption>Evening clouds.</figcaption>
     </figure>
 </div>
@@ -101,5 +102,6 @@ Google Map<br>
 
 <!-- Scripts -->
 <script src="scripts/currentdate.js" type="text/javascript"></script>
+<script src="scripts/hamburger.js" type="text/javascript"></script>
 </body>
 </html>
