--- a/cit230/index.html
+++ b/cit230/index.html
@@ -30,6 +30,7 @@
             <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Franklin pt. 2</a></li>
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin pt. 3</a></li>
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin pt. 4</a></li>
+            <li>Lesson 8: <a href="assignments/lesson-8/franklin-8.html">Franklin pt. 5</a></li>
         </ul>
     </main>
 
