--- a/cit230/assignments/lesson-7/franklin-7.html
+++ b/cit230/assignments/lesson-7/franklin-7.html
@@ -1,143 +1,144 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-    <meta charset="utf-8">
-    <title>Franklin City | Skynote</title>
+    <head>
+        <meta charset="utf-8">
+        <title>Franklin City | Skynote</title>
 
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<!-- Stylesheets -->
-    <link href="normalize.css" type="text/css" rel="stylesheet"/>
-    <link href="styles/main-7.css" type="text/css" rel="stylesheet"/>
-    <link href="styles/medium-7.css" type="text/css" rel="stylesheet"/>
-    <link href="styles/large-7.css" type="text/css" rel="stylesheet"/>
+        <!-- Stylesheets -->
+        <link href="normalize.css" type="text/css" rel="stylesheet"/>
+        <link href="styles/main-7.css" type="text/css" rel="stylesheet"/>
+        <link href="styles/medium-7.css" type="text/css" rel="stylesheet"/>
+        <link href="styles/large-7.css" type="text/css" rel="stylesheet"/>
 
-<!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
-<!-- Scripts -->
-    <script src="scripts/currentdate.js" type="text/javascript"></script>
-    <script src="scripts/hamburger.js" type="text/javascript"></script>
-    <script src="scripts/windchill.js" type="text/javascript"></script>
+        <!-- Scripts -->
+        <script src="scripts/currentdate.js" type="text/javascript"></script>
+        <script src="scripts/hamburger.js" type="text/javascript"></script>
+        <script src="scripts/windchill.js" type="text/javascript"></script>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-<header>
+        <header>
 
-    <img src="images/logo-02.jpg" alt="Skynote logo"/>
+            <img src="images/logo-02.jpg" alt="Skynote logo"/>
 
-    <div class="subheading">
-    <h1>SkyNote</h1>
-    <h2>Weather Updates</h2>
-    </div>
+            <div class="subheading">
+                <h1>SkyNote</h1>
+                <h2>Weather Updates</h2>
+            </div>
 
-    <button class="hamburger" onclick="hamNav()">&#9776;</button>
-</header>
+            <button class="hamburger" onclick="toggleHam()">&#9776;</button>
+        </header>
 
-    <nav>
-        <ul class="navigation">
-            <li><a href="00">Home</a></li>
-            <li><a href="01">Franklin</a></li>
-            <li><a href="02">Greenville</a></li>
-            <li><a href="03">Springfield</a></li>
-            <li><a href="04">Storm Center</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul class="navigation">
+                <li><a href="00">Home</a></li>
+                <li><a href="franklin-7.html">Franklin</a></li>
+                <li><a href="02">Greenville</a></li>
+                <li><a href="03">Springfield</a></li>
+                <li><a href="04">Storm Center</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
 
-<main>
-    <h2>Franklin City</h2>
+        <main>
+            <h2>Franklin City</h2>
 
-    <figure>
-        <img src="images/header-smaller.jpg" srcset="images/header-larger.jpg" alt="trees with sun shining">
-    </figure>
+            <figure>
+                <img src="images/header-smaller.jpg" srcset="images/header-larger.jpg" alt="trees with sun shining">
+            </figure>
 
-    <section class="weather-summary">
-    <h3>Weather Summary</h3>
-        <div class="highlow">
-            <p>High: 90&deg;F</p>
-            <p>Low: 66&deg;F</p>
-        </div>
+            <section class="weather-summary">
+                <h3>Weather Summary</h3>
+                <div class="highlow">
+                    <p>High: 90&deg;F</p>
+                    <p>Low: 66&deg;F</p>
+                </div>
 
-    <div class="current">
-    <h3>Sunny</h3>
+                <div class="current">
+                    <h3>Sunny</h3>
 
-    <picture>
-        <img src="images/#" alt="">
-    </picture>
-        </div>
+                    <picture>
+                        <img src="images/#" alt="">
+                    </picture>
+                </div>
 
-        <div class="conditions">
-            <p>Precipitation: 0%</p>
-            <p>Wind Speed: 5 mph SW</p>
-            <p>Wind Chill: <span id="spanOutput"></span></p>
-        </div>
-    </section>
+                <div class="conditions">
+                    <p>Precipitation: 0%</p>
+                    <p>Wind Speed: 5 mph SW</p>
+                    <p>Wind Chill: <span id="spanOutput"></span></p>
+                </div>
+            </section>
 
-<section class="forecast">
+            <section class="forecast">
 
-    <h3>Ten Day Forecast</h3>
-        <table>
-            <thead>
-                <tr>
-                <th>Day 1</th>
-                <th>Day 2</th>
-                <th>Day 3</th>
-                <th>Day 4</th>
-                <th>Day 5</th>
-                <th>Day 6</th>
-                <th>Day 7</th>
-                <th>Day 8</th>
-                <th>Day 9</th>
-                <th>Day 10</th>
-                </tr>
-            </thead>
+                <h3>Ten Day Forecast</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Day 1</th>
+                            <th>Day 2</th>
+                            <th>Day 3</th>
+                            <th>Day 4</th>
+                            <th>Day 5</th>
+                            <th>Day 6</th>
+                            <th>Day 7</th>
+                            <th>Day 8</th>
+                            <th>Day 9</th>
+                            <th>Day 10</th>
+                        </tr>
+                    </thead>
 
-            <tbody>
-                <tr>
-                <td>89&deg;F</td>
-                <td>87&deg;F</td>
-                <td>78&deg;F</td>
-                <td>75&deg;F</td>
-                <td>72&deg;F</td>
-                <td>72&deg;F</td>
-                <td>79&deg;F</td>
-                <td>83&deg;F</td>
-                <td>85&deg;F</td>
-                <td>89&deg;F</td>
-                </tr>
-            </tbody>
-        </table>
+                    <tbody>
+                        <tr>
+                            <td>89&deg;F</td>
+                            <td>87&deg;F</td>
+                            <td>78&deg;F</td>
+                            <td>75&deg;F</td>
+                            <td>72&deg;F</td>
+                            <td>72&deg;F</td>
+                            <td>79&deg;F</td>
+                            <td>83&deg;F</td>
+                            <td>85&deg;F</td>
+                            <td>89&deg;F</td>
+                        </tr>
+                    </tbody>
+                </table>
 
-</section>
+            </section>
 
-<article>
-    <h3>Franklin Breaks Record</h3>
-    <img src="images/flood.jpg" alt="rain falling on water">
-    <p class="town-article">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-</article>
+            <article>
+                <h3>Franklin Breaks Record</h3>
+                <img src="images/flood.jpg" alt="rain falling on water">
+                <p class="town-article">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            </article>
 
-</main>
+        </main>
 
-<footer>
+        <footer>
 
-<section class="contact">
-    <strong>SkyNote</strong><br>
-    999.999.9999<br>
-    123 Main St. Anytown, US 99999<br>
-    Google Map<br>
-</section>
+            <section class="contact">
+                <strong>SkyNote</strong><br>
+                999.999.9999<br>
+                123 Main St. Anytown, US 99999<br>
+                Google Map<br>
+            </section>
 
-<section class="footer-bar">&copy;2018 | All Rights     Reserved | SkyNote | <span id="currentdate"></span>
-</section>
-</footer>
+            <section class="footer-bar">&copy;2018 | All Rights     Reserved | SkyNote | <span id="currentdate"></span>
+            </section>
+        </footer>
 
-<!-- Scripts -->
-<script src="scripts/hamburger.js" type="text/javascript"></script>
-<script src="scripts/currentdate.js" type="text/javascript"></script>
-<script src="scripts/windchill.js" type="text/javascript"></script>
+        <!-- Scripts -->
+        <script src="scripts/hamburger.js" type="text/javascript"></script>
+        <script src="scripts/currentdate.js" type="text/javascript"></script>
+        <script src="scripts/windchill.js" type="text/javascript"></script>
 
-</body>
+    </body>
 </html>
