--- a/cit230/index.html
+++ b/cit230/index.html
@@ -31,7 +31,7 @@
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin pt. 3</a></li>
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin pt. 4 (revised)</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/franklin-8.html">Franklin pt. 5</a></li>
-            <li>Lesson 9: <a href="lawsload/index.html">Lazy Loading</a></li>
+            <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Heros.html</a></li>
         </ul>
     </main>
 
