--- a/cit230/assignments/lesson-9/franklin-9.html
+++ b/cit230/assignments/lesson-9/franklin-9.html
@@ -59,8 +59,8 @@
             </figure>
 
             <section class="weather-summary">
-                <h3>Weather Summary</h3>
-                <h3>Weather Summary for <span id="city"> City </span></h3>
+
+                <h3>Weather Summary for <span id="city"> Franklin City </span></h3>
                 <br>
                 <div class="current">
                     <p>Current Temperature : <span id="current"> 50 </span>&deg;F</p>
