--- a/cit230/index.html
+++ b/cit230/index.html
@@ -33,7 +33,8 @@
             <li>Lesson 8: <a href="assignments/lesson-8/franklin-8.html">Franklin pt. 5</a></li>
             <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Heros.html</a></li>
             <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage</a></li>
-            <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Final Weather Website</a></li>
+            <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10</a></li>
+            <li>Lesson 10: <a href="assignments/weathersite/index.html">Final Weather Website</a></li>
         </ul>
     </main>
 
