--- a/cit230/assignments/lesson-10/franklin-10.html
+++ b/cit230/assignments/lesson-10/franklin-10.html
@@ -4,8 +4,8 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Franklin City | Skynote</title>
-
+        <meta name="description" content="SkyNote Franklin Page">
+        <meta name="author" content="David Laws">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <!-- Stylesheets -->
@@ -38,7 +38,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="index-10.html">Home</a></li>
-                <li><a href="franklin-10.html">Franklin</a></li>
+                <li><a class="active" href="franklin-10.html">Franklin</a></li>
                 <li><a href="greenville-10.html">Greenville</a></li>
                 <li><a href="springfield-10.html">Springfield</a></li>
                 <li><a href="stormcenter-10.html">Storm Center</a></li>
