--- a/cit230/assignments/lesson-10/springfield-10.html
+++ b/cit230/assignments/lesson-10/springfield-10.html
@@ -4,8 +4,8 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Springfield City | Skynote</title>
-
+        <meta name="description" content="SkyNote Springfield Page">
+        <meta name="author" content="David Laws">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <!-- Stylesheets -->
@@ -18,7 +18,6 @@
         <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
         <!-- Scripts are at bottom of page -->
-
 
     </head>
 
@@ -41,7 +40,7 @@
                 <li><a href="index-10.html">Home</a></li>
                 <li><a href="franklin-10.html">Franklin</a></li>
                 <li><a href="greenville-10.html">Greenville</a></li>
-                <li><a href="springfield-10.html">Springfield</a></li>
+                <li><a class="active" href="springfield-10.html">Springfield</a></li>
                 <li><a href="stormcenter-10.html">Storm Center</a></li>
                 <li><a href="gallery-10.html">Gallery</a></li>
             </ul>
