--- a/cit230/assignments/lesson-10/stormcenter-10.html
+++ b/cit230/assignments/lesson-10/stormcenter-10.html
@@ -1,26 +1,21 @@
 
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-<meta charset="utf-8">
-<title>StormCenter | Skynote</title>
+    <meta charset="utf-8">
+    <meta name="description" content="SkyNote Gallery Page">
+    <meta name="author" content="David Laws">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Stylesheets -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main-10.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/medium-10.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/large-10.css" type="text/css" rel="stylesheet"/>
 
-<!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
-<link href="styles/main-10.css" type="text/css" rel="stylesheet"/>
-<link href="styles/medium-10.css" type="text/css" rel="stylesheet"/>
-<link href="styles/large-10.css" type="text/css" rel="stylesheet"/>
-
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-
-<!-- Scripts -->
-<script src="scripts/currentdate.js" type="text/javascript"></script>
-<script src="scripts/hamburger.js" type="text/javascript"></script>
-<script src="scripts/windchill.js" type="text/javascript"></script>
-<script src="scripts/rating.js" type="text/javascript"></script>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
 </head>
 
@@ -44,7 +39,7 @@
             <li><a href="franklin-10.html">Franklin</a></li>
             <li><a href="greenville-10.html">Greenville</a></li>
             <li><a href="springfield-10.html">Springfield</a></li>
-            <li><a href="stormcenter-10.html">Storm Center</a></li>
+            <li><a class="active" href="stormcenter-10.html">Storm Center</a></li>
             <li><a href="gallery-10.html">Gallery</a></li>
         </ul>
     </nav>
