--- a/cit230/assignments/lesson-9/gallery.html
+++ b/cit230/assignments/lesson-9/gallery.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
-<meta charset="utf-8">
-<title>Franklin City | Skynote</title>
-
-<meta name="viewport" content="width=device-width,initial-scale=1">
-
-<!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
-<link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <meta name="description" content="SkyNote Gallery Page">
+    <meta name="author" content="David Laws">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
+    <!-- Stylesheets -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
 
-<!-- Scripts -->
-<script src="scripts/currentdate.js" type="text/javascript"></script>
-<script src="scripts/hamburger.js" type="text/javascript"></script>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
 </head>
 
