--- a/cit230/assignments/lesson-9/stormcenter.html
+++ b/cit230/assignments/lesson-9/stormcenter.html
@@ -2,25 +2,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-<meta charset="utf-8">
-<title>StormCenter | Skynote</title>
+    <meta charset="utf-8">
+    <meta name="description" content="SkyNote Storm Center">
+    <meta name="author" content="David Laws">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Stylesheets -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
 
-<!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
-<link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
-
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-
-<!-- Scripts -->
-<script src="scripts/currentdate.js" type="text/javascript"></script>
-<script src="scripts/hamburger.js" type="text/javascript"></script>
-<script src="scripts/windchill.js" type="text/javascript"></script>
-<script src="scripts/rating.js" type="text/javascript"></script>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
 </head>
 
