--- a/cit230/assignments/lesson-9/thanks.html
+++ b/cit230/assignments/lesson-9/thanks.html
@@ -3,19 +3,19 @@
 <html lang="en-us">
 
 <head>
-<meta charset="utf-8">
-<title>Franklin City | Skynote</title>
+    <meta charset="utf-8">
+    <meta name="description" content="SkyNote Thank You Page">
+    <meta name="author" content="David Laws">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Stylesheets -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
 
-<!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
-<link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
-
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
 </head>
 
