--- a/cit230/assignments/weathersite/greenville.html
+++ b/cit230/assignments/weathersite/greenville.html
@@ -1,12 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 
     <head>
         <meta charset="utf-8">
-        <title>Greenville City | Skynote</title>
-
+        <meta name="description" content="SkyNote Greenville Page">
+        <meta name="author" content="David Laws">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        
+        <title>Greenville City | Skynote</title>
 
         <!-- Stylesheets -->
         <link href="normalize.css" type="text/css" rel="stylesheet"/>
@@ -39,7 +40,7 @@
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="franklin.html">Franklin</a></li>
-                <li><a href="greenville.html">Greenville</a></li>
+                <li><a class="active" href="greenville.html">Greenville</a></li>
                 <li><a href="springfield.html">Springfield</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -129,8 +130,8 @@
                 Google Map<br>
             </section>
 
-            <section class="footer-bar">&copy;2018 | All Rights Reserved | SkyNote | <span id="currentdate"></span>
-            </section>
+            <section class="footer-bar">&copy;2018 | All Rights Reserved | SkyNote | <span id="currentdate"></span></section>
+            
         </footer>
 
         <!-- Scripts -->
