--- a/cit230/assignments/lesson-10/index-10.html
+++ b/cit230/assignments/lesson-10/index-10.html
@@ -3,21 +3,21 @@
 <html lang="en-us">
 
 <head>
-<meta charset="utf-8">
-<title>Home Page | Skynote</title>
+    <meta charset="utf-8">
+    <meta name="description" content="SkyNote Home Page">
+    <meta name="author" content="David Laws">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Stylesheets -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main-10.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/medium-10.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/large-10.css" type="text/css" rel="stylesheet"/>
 
-<!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
-<link href="styles/main-10.css" type="text/css" rel="stylesheet"/>
-<link href="styles/medium-10.css" type="text/css" rel="stylesheet"/>
-<link href="styles/large-10.css" type="text/css" rel="stylesheet"/>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-
-<!-- Scripts are at the bottom of the page -->
+    <!-- Scripts are at the bottom of the page -->
 
 </head>
 
@@ -37,7 +37,7 @@
 
     <nav>
             <ul class="navigation">
-                <li><a href="index-10.html">Home</a></li>
+                <li><a class="active" href="index-10.html">Home</a></li>
                 <li><a href="franklin-10.html">Franklin</a></li>
                 <li><a href="greenville-10.html">Greenville</a></li>
                 <li><a href="springfield-10.html">Springfield</a></li>
