--- a/cit230/assignments/lesson-9/franklin-9.html
+++ b/cit230/assignments/lesson-9/franklin-9.html
@@ -4,9 +4,10 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Franklin City | Skynote</title>
-
+        <meta name="description" content="SkyNote Franklin Page">
+        <meta name="author" content="David Laws">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+
 
         <!-- Stylesheets -->
         <link href="normalize.css" type="text/css" rel="stylesheet"/>
@@ -16,12 +17,6 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-
-        <!-- Scripts -->
-        <script src="scripts/currentdate.js" type="text/javascript"></script>
-        <script src="scripts/hamburger.js" type="text/javascript"></script>
-        <script src="scripts/windchill.js" type="text/javascript"></script>
-        <script src="scripts/frank-weather.js" type="text/javascript"></script>
 
     </head>
 
