--- a/cit230/assignments/lesson-9/index-1.html
+++ b/cit230/assignments/lesson-9/index-1.html
@@ -3,26 +3,19 @@
 <html lang="en-us">
 
 <head>
-<meta charset="utf-8">
-<title>Home Page | Skynote</title>
+    <meta charset="utf-8">
+    <meta name="description" content="SkyNote Home Page">
+    <meta name="author" content="David Laws">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- Stylesheets -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
 
-<!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
-<link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
-<link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
-
-<!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-
-<!-- Scripts -->
-<script src="scripts/currentdate.js" type="text/javascript"></script>
-<script src="scripts/hamburger.js" type="text/javascript"></script>
-<script src="scripts/skystories.js" type="text/javascript"></script>
-
-
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
 
 </head>
 
@@ -54,7 +47,7 @@
 
 <main>
 
-<section class="skyTowns">
+<section class="towns">
 
 </section>
 
@@ -76,7 +69,7 @@ Google Map<br>
 <!-- Scripts -->
 <script src="scripts/hamburger.js" type="text/javascript"></script>
 <script src="scripts/currentdate.js" type="text/javascript"></script>
-<script src="scripts/skystories.js" type="text/javascript"></script>
+<script src="scripts/towns.js" type="text/javascript"></script>
 
 </body>
 </html>
