--- a/cit230/assignments/weathersite/franklin.html
+++ b/cit230/assignments/weathersite/franklin.html
@@ -1,13 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 
     <head>
         <meta charset="utf-8">
-        <title>Franklin City | Skynote</title>
-
+        <meta name="description" content="SkyNote Franklin Page">
+        <meta name="author" content="David Laws">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-
+        
+        <title>Franklin City | Skynote</title>
+        
         <!-- Stylesheets -->
         <link href="normalize.css" type="text/css" rel="stylesheet"/>
         <link href="styles/main.css" type="text/css" rel="stylesheet"/>
@@ -38,7 +39,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="franklin.html">Franklin</a></li>
+                <li><a class="active" href="franklin.html">Franklin</a></li>
                 <li><a href="greenville.html">Greenville</a></li>
                 <li><a href="springfield.html">Springfield</a></li>
                 <li><a href="stormcenter.html">Storm Center</a></li>
