--- a/cit230/assignments/weathersite/thanks.html
+++ b/cit230/assignments/weathersite/thanks.html
@@ -1,12 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
+    
     <meta charset="utf-8">
-    <title>Franklin City | Skynote</title>
-
+    <meta name="description" content="SkyNote Thank You Page">
+    <meta name="author" content="David Laws">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    
+    <title>Franklin City | Skynote</title>
 
     <!-- Stylesheets -->
     <link href="normalize.css" type="text/css" rel="stylesheet"/>
@@ -20,11 +22,11 @@
 </head>
 
 <body>
-<h1>Thank you for your feedback!</h1>
+    <h1>Thank you for your feedback!</h1>
     <br>
     <br>
     <br>
-    <a href="index-10.html">Return to Home</a>
+    <a href="index.html">Return to Home</a>
 
 </body>
 </html>
