--- a/cit230/assignments/lesson-7/gallery.html
+++ b/cit230/assignments/lesson-7/gallery.html
@@ -33,20 +33,19 @@
             <h2>Weather Updates</h2>
         </div>
 
-        <button class="hamburger" onclick="hamNav()">&#9776;</button>
-
+        <button class="hamburger" onclick="toggleHam()">&#9776;</button>
     </header>
 
-<nav>
-<ul class="navigation">
-<li><a href="00">Home</a></li>
-<li><a href="franklin-7.html">Franklin</a></li>
-<li><a href="02">Greenville</a></li>
-<li><a href="03">Springfield</a></li>
-<li><a href="04">Storm Center</a></li>
-<li><a href="gallery.html">Gallery</a></li>
-</ul>
-</nav>
+    <nav>
+        <ul class="navigation">
+            <li><a href="00">Home</a></li>
+            <li><a href="franklin-7.html">Franklin</a></li>
+            <li><a href="02">Greenville</a></li>
+            <li><a href="03">Springfield</a></li>
+            <li><a href="04">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
 
 <main>
     <br>
