--- a/cit230/index.html
+++ b/cit230/index.html
@@ -32,9 +32,9 @@
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin pt. 4 (revised)</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/franklin-8.html">Franklin pt. 5</a></li>
             <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Heros.html</a></li>
-            <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage</a></li>
-            <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10</a></li>
-            <li>Lesson 10: <a href="assignments/weathersite/index.html">Final Weather Website</a></li>
+            <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage (Revised)</a></li>
+            <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10 (Revised)</a></li>
+            <li>Lesson 10: <a href="assignments/weathersite/index.html">Final Weather Website (Revised)</a></li>
         </ul>
     </main>
 
