--- a/cit230/assignments/lesson-8/gallery.html
+++ b/cit230/assignments/lesson-8/gallery.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <!-- Stylesheets -->
-<link href="normalize.css" type="text/css" rel="stylesheet"/>
+<link href="styles/normalize.css" type="text/css" rel="stylesheet"/>
 <link href="styles/main-8.css" type="text/css" rel="stylesheet"/>
 <link href="styles/medium-8.css" type="text/css" rel="stylesheet"/>
 <link href="styles/large-8.css" type="text/css" rel="stylesheet"/>
