--- a/cit230/assignments/lesson-9/gallery.html
+++ b/cit230/assignments/lesson-9/gallery.html
@@ -9,7 +9,7 @@
 
 
     <!-- Stylesheets -->
-    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/normalize.css" type="text/css" rel="stylesheet"/>
     <link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
     <link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
     <link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
