--- a/cit230/assignments/lesson-9/stormcenter.html
+++ b/cit230/assignments/lesson-9/stormcenter.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- Stylesheets -->
-    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/normalize.css" type="text/css" rel="stylesheet"/>
     <link href="styles/main-9.css" type="text/css" rel="stylesheet"/>
     <link href="styles/medium-9.css" type="text/css" rel="stylesheet"/>
     <link href="styles/large-9.css" type="text/css" rel="stylesheet"/>
