--- a/cit230/assignments/lesson-10/thanks-10.html
+++ b/cit230/assignments/lesson-10/thanks-10.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- Stylesheets -->
-    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/normalize.css" type="text/css" rel="stylesheet"/>
     <link href="styles/main-10.css" type="text/css" rel="stylesheet"/>
     <link href="styles/medium-10.css" type="text/css" rel="stylesheet"/>
     <link href="styles/large-10.css" type="text/css" rel="stylesheet"/>
