--- a/cit230/assignments/weathersite/greenville.html
+++ b/cit230/assignments/weathersite/greenville.html
@@ -6,11 +6,11 @@
         <meta name="description" content="SkyNote Greenville Page">
         <meta name="author" content="David Laws">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        
+
         <title>Greenville City | Skynote</title>
 
         <!-- Stylesheets -->
-        <link href="normalize.css" type="text/css" rel="stylesheet"/>
+        <link href="styles/normalize.css" type="text/css" rel="stylesheet"/>
         <link href="styles/main.css" type="text/css" rel="stylesheet"/>
         <link href="styles/medium.css" type="text/css" rel="stylesheet"/>
         <link href="styles/large.css" type="text/css" rel="stylesheet"/>
@@ -131,7 +131,7 @@
             </section>
 
             <section class="footer-bar">&copy;2018 | All Rights Reserved | SkyNote | <span id="currentdate"></span></section>
-            
+
         </footer>
 
         <!-- Scripts -->
