--- a/cit230/assignments/weathersite/thanks.html
+++ b/cit230/assignments/weathersite/thanks.html
@@ -2,16 +2,16 @@
 <html lang="en-us">
 
 <head>
-    
+
     <meta charset="utf-8">
     <meta name="description" content="SkyNote Thank You Page">
     <meta name="author" content="David Laws">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    
+
     <title>Franklin City | Skynote</title>
 
     <!-- Stylesheets -->
-    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/normalize.css" type="text/css" rel="stylesheet"/>
     <link href="styles/main.css" type="text/css" rel="stylesheet"/>
     <link href="styles/medium.css" type="text/css" rel="stylesheet"/>
     <link href="styles/large.css" type="text/css" rel="stylesheet"/>
