--- a/cit230/assignments/weathersite/gallery.html
+++ b/cit230/assignments/weathersite/gallery.html
@@ -79,7 +79,7 @@
 
     <figure>
         <img src="images/gallery/photo-1500487003906-9baadc8d610d.jpg" alt="trees with sun shining">
-        <figcaption>Morning light breaks over the bridge on North Street.</figcaption>
+        <figcaption>Morning light breaks over the bridge.</figcaption>
     </figure>
 
     <figure>
