--- a/cit230/assignments/weathersite/stormcenter.html
+++ b/cit230/assignments/weathersite/stormcenter.html
@@ -56,7 +56,7 @@
 
 <main>
 
-    <form method="post" action="thanks-10.html">
+    <form method="post" action="thanks.html">
 
     <fieldset>
         <legend> Personal Information </legend>
