--- a/cit230/index.html
+++ b/cit230/index.html
@@ -34,7 +34,7 @@
             <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Heros.html</a></li>
             <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage (Revised)</a></li>
             <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10 (Revised)</a></li>
-            <li>Lesson 10: <a href="assignments/weathersite/index.html">Final Weather Website (Revised)</a></li>
+            <li>Lesson 10: <a href="assignments/weathersite/index.html">Final Weather Website (Final Revision)</a></li>
         </ul>
     </main>
 
