--- a/cit230/index.html
+++ b/cit230/index.html
@@ -29,12 +29,12 @@
             <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin</a></li>
             <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Franklin pt. 2</a></li>
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin pt. 3</a></li>
-            <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin pt. 4 (revised)</a></li>
+            <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin pt. 4 (needs to be graded)</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/franklin-8.html">Franklin pt. 5</a></li>
             <li>Lesson 9: <a href="assignments/lesson-9/heroes.html">Heros.html</a></li>
-            <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage (Revised)</a></li>
-            <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10 (Revised)</a></li>
-            <li>Lesson 10: <a href="assignments/weathersite/index.html">Final Weather Website (Final Revision)</a></li>
+            <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage (needs to be graded)</a></li>
+            <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10 (semi-final draft)</a></li>
+            <li>Lesson 10: <a href="assignments/weathersite/index.html">Week 10: Final Weather Website (needs to be graded)</a></li>
         </ul>
     </main>
 
