--- a/cit230/index.html
+++ b/cit230/index.html
@@ -35,6 +35,7 @@
             <li>Lesson 9 (pt.2): <a href="assignments/lesson-9/index-1.html">New Homepage (needs to be graded)</a></li>
             <li>Lesson 10: <a href="assignments/lesson-10/index-10.html">Week 10 (semi-final draft)</a></li>
             <li>Lesson 10: <a href="assignments/weathersite/index.html">Week 10: Final Weather Website (needs to be graded)</a></li>
+            <li>Lesson 11: <a href="assignments/lesson-11/Lesson4/index.htm">Week 10: Final Weather Website (needs to be graded)</a></li>
         </ul>
     </main>
 
