--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -47,18 +47,18 @@
         <div class="grid-img">
 
             <figure>
-                <img src="images/leaves-water.JPG" alt="tree with red leaves near water">
-                <figcaption>Looking over crooked creek.</figcaption>
+                <img src="images/styleguide-logo.png" alt="">
+                <figcaption>Style Guide</figcaption>
             </figure>
 
             <figure>
-                <img src="images/gold-flowers.JPG" alt="close up of yellow flowers">
-                <figcaption>The flowers shine brightest in the rain.</figcaption>
+                <img src="images/practice-logo.png" alt="">
+                <figcaption>Practice Folder</figcaption>
             </figure>
 
             <figure>
-                <img src="images/autumn-mountain.JPG" alt="orange-leaf trees on a mountain">
-                <figcaption>Misty mountains are my favorite.</figcaption>
+                <img src="images/behance-logo.png" alt="">
+                <figcaption>Behance</figcaption>
             </figure>
 
         </div>
