--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -47,19 +47,28 @@
         <div class="grid-img">
 
             <figure>
-                <img src="images/styleguide-logo.png" alt="">
+                <a href="styleguide.html"><img src="images/styleguide-logo.png" alt="psd file logo"></a>
                 <figcaption>Style Guide</figcaption>
             </figure>
 
             <figure>
-                <img src="images/practice-logo.png" alt="">
+                <a href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank"><img src="images/practice-logo.png" alt="two stacked books icon"></a>
                 <figcaption>Practice Folder</figcaption>
             </figure>
 
             <figure>
-                <img src="images/behance-logo.png" alt="">
+                <a href="https://www.behance.net/dp2313ea0f" target="_blank"><img src="images/behance-logo.png" alt="behance logo"></a>
                 <figcaption>Behance</figcaption>
             </figure>
+
+
+            <section class="downloads">
+                <h1>Hello There!</h1>
+
+                <p>If you'd like to download the psd of my style guide, you can <a class="links" href="newer-grid.psd">click here.</a> At the moment it's quite rough and slightly inaccurate, but before the week is over it will be <em>stunning</em> and <strong>precise</strong>. Are you excited?</p>
+
+
+            </section>
 
         </div>
 
