--- a/thedavidlaws/styleguide.html
+++ b/thedavidlaws/styleguide.html
@@ -9,6 +9,13 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Quando" rel="stylesheet">
     </head>
     <body>
+
+        <header>
+
+                <a class="proj" href="projects.html">Return to Projects</a>
+
+        </header>
+
         <h1 class="styleguide">David Laws Style Guide</h1>
 
 
@@ -27,10 +34,10 @@
         <section>
             <h2 class="styleguide">Layout</h2>
             <h3 class="styleguide">Sitemap</h3>
-            <img src="images/sitemap.jpg" alt="Sitemap image"/>
+            <img src="images/guide/sitemap.jpg" alt="Sitemap image"/>
             <h3 class="styleguide">Wireframes</h3>
-            <img src="images/laws-grid-01.jpg" alt="Wireframe 1 image"/>
-            <img src="images/laws-grid-02.jpg" alt="Wireframe 2 image"/>
+            <img src="images/guide/laws-grid-01.jpg" alt="Wireframe 1 image"/>
+            <img src="images/guide/laws-grid-02.jpg" alt="Wireframe 2 image"/>
             <h3 class="styleguide">Photoshop Design</h3>
             <!-- You have not created this file yet. When this is completed you will need to upload it to your website and update the following link. -->
 
