--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -44,7 +44,7 @@
         <h2></h2>
         <br>
 
-        <div class="grid-img">
+        <div class="gridPro">
 
             <figure>
                 <a href="styleguide.html"><img src="images/styleguide-logo.png" alt="psd file logo"></a>
