--- a/thedavidlaws/index-final.html
+++ b/thedavidlaws/index-final.html
@@ -45,8 +45,11 @@
     <!-- Main -->
     <main>
 
-        <h1>Greetings</h1>
-        <p>Everything you know is a lie... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p><br>
+        <h1>Welcome!</h1>
+        <p>My name is <a class="links" href="https://www.linkedin.com/in/thedavidlaws/" target="_blank">David Laws</a>, and this is a compilation of my interests, school projects, and the beauty I find in life. I hope as you explore <a class="links" href="gallery.html">my photography</a> and listen to <a class="links" href="gallery.html">my stories</a> you will find curiosity and gratitude in your heart. The beauty we find in simplicity will outweigh any riches in this life.<br><br>
+
+            Perhaps <a class="links" href="https://www.britannica.com/biography/John-Muir" target="_blank">John Muir</a> expressed it best when he wrote, "Everybody needs beauty as well as bread, places to play in and pray in,
+        where nature may heal and give strength to body and soul."</p><br>
 
 
         <h2>Recently Added</h2>
@@ -69,6 +72,8 @@
             </figure>
 
         </div>
+
+        <a id="seeMo" href="gallery.html">See More</a>
 
     </main>
 
